# shellcode-rs

./: Cargo.toml  README.md  go.sh  runner.c  where_is.c
.cargo/: config
src/: main.rs  utils.rs
